--- a/common.css
+++ b/common.css
@@ -7,3 +7,13 @@ h1,h2,h3,h4,h5,h6 {
 :root {
   font-size:20px;
 }
+body {
+  margin:2em 0;
+  text-align:center;
+}
+input[type=radio],input[type=checkbox] {
+  display:none;
+}
+li {
+  list-style:none;
+}
