--- a/common.css
+++ b/common.css
@@ -5,15 +5,65 @@ h1,h2,h3,h4,h5,h6 {
   all:unset;
 }
 :root {
-  font-size:20px;
+  font-size:18px;
+  font-family:sans-serif;
+  background:linear-gradient(135deg,hsl(55,80%,70%),hsl(105,70%,80%));
+  --theme:hsl(80,50%,50%);
+  --theme-bg:hsl(80,80%,70%);
+  min-height:100%;
 }
 body {
-  margin:2em 0;
+  margin:2em .5em;
   text-align:center;
+}
+body>*:not(script) {
+  max-width:1000px;
+  margin-left:auto;margin-right:auto;
+}
+menu,ul,ol {
+  margin:0;padding:0;
+}
+li {
+  list-style:none;
 }
 input[type=radio],input[type=checkbox] {
   display:none;
 }
-li {
-  list-style:none;
+label {
+  display:inline-block;
+  cursor:pointer;
+}
+.toggle {
+  display:inline-flex;justify-content:space-between;align-items:center;
+  border:.1rem solid var(--theme);border-radius:3em;
+  background:var(--theme-bg);
+  width:4rem;height:1.5rem;
+}
+.toggle::after {
+  margin:0 -.1em;
+  content:attr(data-icon); 
+  width:2rem;height:2rem;line-height:2rem;
+  border-radius:9em;
+  background:var(--theme);    
+}
+@media (max-width:600px) {
+  :root {font-size:3vw;}
+}
+input[type='range'] {
+    -webkit-appearance:none;
+    height:.5rem;
+    background:var(--theme-bg);
+    border:.05rem solid var(--theme);border-radius:5em;
+}
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance:none;
+    width:1.5rem;height:1.5rem;
+    border-radius:5em;
+    background:var(--theme);
+}
+input[type='range']::-moz-range-thumb {
+    appearance:none;
+    width:1.5rem;height:1.5rem;
+    border-radius:5em;
+    background:var(--theme);
 }
