--- a/common.css
+++ b/common.css
@@ -3,6 +3,7 @@
 }
 h1,h2,h3,h4,h5,h6 {
   all:unset;
+  display:inline-block;
 }
 :root {
   font-size:3vw;
@@ -11,7 +12,6 @@ h1,h2,h3,h4,h5,h6 {
   --theme:hsl(80,50%,50%);
   --theme-bg:hsl(80,80%,70%);
   min-height:100%;
-  overflow-x:hidden;
 }
 body {
   margin:2em .5em;
